...
        app:layout_constraintBottom_toBottomOf="@id/ic_dinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_dinner"
        tools:text="Dinner Kcal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_forageable_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
...
